@@ -1,3 +1,7 @@
+Sat Mar 11 15:23:20 CET 2006 (tk)
+---------------------------------
+  * libclamav/sis.c: improve support for multi-language files
+
 Fri Mar 10 16:08:25 CET 2006 (tk)
 ---------------------------------
   * libclamav/matcher.c: properly handle partial reads in cli_scandesc()
